fix: rename oci helm release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -234,18 +234,12 @@ jobs:
 
       - name: Package and Push Helm Chart to Docker Hub
         run: |
+          # Change directory
           cd deploy/helm
+
           # Package the chart
           helm package s3-encryption-proxy/
 
           # Push to Docker Hub as OCI artifact
           VERSION=${GITHUB_REF_NAME#v}
-
-          # Enable OCI support in Helm
-          export HELM_EXPERIMENTAL_OCI=1
-
-          # Login to Docker registry for Helm OCI
-          echo ${{ secrets.DOCKERHUB_PAT }} | helm registry login registry-1.docker.io -u hansfischer --password-stdin
-
-          # Push the chart
-          helm push s3-encryption-proxy-${VERSION}.tgz oci://registry-1.docker.io/hansfischer/s3-encryption-proxy-helm
+          helm push s3-encryption-proxy-helm-${VERSION}.tgz oci://registry-1.docker.io/hansfischer
