--- a/deploy/helm/s3-encryption-proxy/Chart.yaml
+++ b/deploy/helm/s3-encryption-proxy/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: s3-encryption-proxy
+name: s3-encryption-proxy-helm
 description: A Helm chart for S3 Encryption Proxy - transparent S3 encryption/decryption proxy
 type: application
 version: 0.1.0
