--- a/deploy/helm/s3-encryption-proxy/templates/secret.yaml
+++ b/deploy/helm/s3-encryption-proxy/templates/secret.yaml
@@ -21,3 +21,6 @@ data:
   {{- if .Values.secrets.aws.secretAccessKey }}
   aws-secret-access-key: {{ .Values.secrets.aws.secretAccessKey | b64enc }}
   {{- end }}
+  {{- if .Values.license.jwt }}
+  license.jwt: {{ .Values.license.jwt | b64enc }}
+  {{- end }}
