--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       - name: Run tests
         run: make test-unit
 
@@ -73,6 +76,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       - name: Run GoSec security scan
         run: make gosec
 
@@ -92,6 +98,9 @@ jobs:
 
       - name: Install dependencies
         run: go mod download
+
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Run vulnerability check
         run: make vuln
@@ -113,6 +122,9 @@ jobs:
       - name: Install dependencies
         run: go mod download
 
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       - name: Run linting
         run: |
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
@@ -133,6 +145,9 @@ jobs:
 
       - name: Install dependencies
         run: go mod download
+
+      - name: Install build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
