--- a/deploy/helm/s3-encryption-proxy/values.yaml
+++ b/deploy/helm/s3-encryption-proxy/values.yaml
@@ -2,10 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 2
+replicaCount: 1
 
 image:
-  repository: s3-encryption-proxy
+  registry: docker.io
+  repository: hansfischer/s3-encryption-proxy
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -25,10 +26,7 @@ serviceAccount:
 
 podAnnotations: {}
 
-podLabels:
-  app.kubernetes.io/name: s3-encryption-proxy
-  app.kubernetes.io/component: proxy
-  app.kubernetes.io/part-of: s3-encryption-platform
+podLabels: {}
 
 podSecurityContext:
   fsGroup: 1001
@@ -116,9 +114,6 @@ autoscaling:
 
 # Additional volumes on the output Deployment definition.
 volumes:
-  - name: config
-    configMap:
-      name: s3-encryption-proxy-config
   - name: tmp
     emptyDir: {}
 
@@ -195,27 +190,14 @@ config:
     encryptionMethodAlias: "default"
     providers:
       - alias: "default"
-        type: "tink"
-        description: "Default Tink envelope encryption"
+        type: "aes"
+        description: "Default AES envelope encryption"
         config:
-          kekUri: ""
-          credentialsPath: "/app/secrets/gcp-credentials.json"
-          algorithm: "AES256_GCM"
-          keyRotationDays: 90
-          metadataKeyPrefix: "x-s3ep-"
+          aes_key: "0123456789abcdef0123456789abcdef"
+          metadata_key_prefix: "x-s3ep-"
 
-# Environment variables
-env:
-  - name: S3_ACCESS_KEY_ID
-    valueFrom:
-      secretKeyRef:
-        name: s3-encryption-proxy-secrets
-        key: access-key-id
-  - name: S3_SECRET_KEY
-    valueFrom:
-      secretKeyRef:
-        name: s3-encryption-proxy-secrets
-        key: secret-key
+# Environment variables (additional custom env vars can be added here)
+env: []
 
 # Secrets configuration
 secrets:
