chore(renovate): update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -129,7 +129,11 @@
     "automergeType": "pr"
   },
   "gomod": {
-    "enabled": true
+    "enabled": true,
+    "postUpdateOptions": [
+      "gomodTidy",
+      "gomodUpdateImportPaths"
+    ]
   },
   "dockerfile": {
     "enabled": true
