fix: update push targets

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
-          username: hansfischer
+          username: guidedtraffic
           password: ${{ secrets.DOCKERHUB_PAT }}
 
       - name: Docker meta
@@ -101,7 +101,7 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: |
-            ${{ github.workspace }}/hansfischer-s3-encryption-proxy_*.spdx.json
+            ${{ github.workspace }}/guidedtraffic-s3-encryption-proxy_*.spdx.json
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -201,45 +201,46 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  release-helm-docker:
-    name: Release Helm Chart to Docker Hub (OCI)
-    needs: build
-    runs-on: self-hosted
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-        with:
-          fetch-depth: 0
+  # we don't release to dockerhub for now
+  # release-helm-docker:
+  #   name: Release Helm Chart to Docker Hub (OCI)
+  #   needs: build
+  #   runs-on: self-hosted
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v6
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Install Helm
-        uses: azure/setup-helm@v4
-        with:
-          version: v3.12.0
+  #     - name: Install Helm
+  #       uses: azure/setup-helm@v4
+  #       with:
+  #         version: v3.12.0
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: hansfischer
-          password: ${{ secrets.DOCKERHUB_PAT }}
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: guidedtraffic
+  #         password: ${{ secrets.DOCKERHUB_PAT }}
 
-      - name: Update Chart Version
-        run: |
-          # Extrahiere Version aus dem Release-Tag (ohne 'v' Prefix)
-          VERSION=${GITHUB_REF_NAME#v}
-          # Aktualisiere Chart und App Version
-          sed -i "s/^version:.*$/version: ${VERSION}/" deploy/helm/s3-encryption-proxy/Chart.yaml
-          sed -i "s/^appVersion:.*$/appVersion: \"${VERSION}\"/" deploy/helm/s3-encryption-proxy/Chart.yaml
-          # Aktualisiere Image Tag in values.yaml
-          sed -i "s/^  tag:.*$/  tag: \"${VERSION}\"/" deploy/helm/s3-encryption-proxy/values.yaml
+  #     - name: Update Chart Version
+  #       run: |
+  #         # Extrahiere Version aus dem Release-Tag (ohne 'v' Prefix)
+  #         VERSION=${GITHUB_REF_NAME#v}
+  #         # Aktualisiere Chart und App Version
+  #         sed -i "s/^version:.*$/version: ${VERSION}/" deploy/helm/s3-encryption-proxy/Chart.yaml
+  #         sed -i "s/^appVersion:.*$/appVersion: \"${VERSION}\"/" deploy/helm/s3-encryption-proxy/Chart.yaml
+  #         # Aktualisiere Image Tag in values.yaml
+  #         sed -i "s/^  tag:.*$/  tag: \"${VERSION}\"/" deploy/helm/s3-encryption-proxy/values.yaml
 
-      - name: Package and Push Helm Chart to Docker Hub
-        run: |
-          # Change directory
-          cd deploy/helm
+  #     - name: Package and Push Helm Chart to Docker Hub
+  #       run: |
+  #         # Change directory
+  #         cd deploy/helm
 
-          # Package the chart
-          helm package s3-encryption-proxy/
+  #         # Package the chart
+  #         helm package s3-encryption-proxy/
 
-          # Push to Docker Hub as OCI artifact
-          VERSION=${GITHUB_REF_NAME#v}
-          helm push s3-encryption-proxy-helm-${VERSION}.tgz oci://registry-1.docker.io/hansfischer
+  #         # Push to Docker Hub as OCI artifact
+  #         VERSION=${GITHUB_REF_NAME#v}
+  #         helm push s3-encryption-proxy-helm-${VERSION}.tgz oci://registry-1.docker.io/guidedtraffic
