--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -193,7 +193,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: hansfischer
+          username: guidedtraffic
           password: ${{ secrets.DOCKERHUB_PAT }}
 
       - name: Build and start test infrastructure
